--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
+@layer utilities {
+
+  /* Utility classes for sroll-snap containers on Desktop */
+  /* max-w-5xl = 1024px = 64rem */
+  /* p-8 = 32px = 2rem */
+
+  .ml-auto {
+      margin-left: calc((100vw - 64rem) / 2);
+  }
+
+  .pl-auto {
+      padding-left: calc((100vw - 64rem) / 2);
+  }
+
+  .pl-snap {
+      padding-left: calc((100vw - 64rem) / 2 + 2rem);
+  }
+
+}
 @tailwind utilities;
